# Deo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeLists_safe.txt  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  main.cpp
docs/: ADVANCED_CONSENSUS.md  ADVANCED_STORAGE.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  BUILD_SYSTEM.md  CLI_REFERENCE.md  COMPILER_GUIDE.md  DEPLOYMENT_GUIDE.md  GOSSIP_INTEGRATION_AUDIT.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  MONITORING.md  NETWORK_ENHANCEMENTS.md  PERFORMANCE_OPTIMIZATION.md  PROOF_OF_STAKE.md  README.md  RESEARCH_METHODOLOGY.md  SECURITY_AUDIT.md  STORAGE_VERIFICATION.md  TESTING_FRAMEWORK.md
examples/: README.md
examples/api/: curl_examples.sh  web3_examples.py
examples/contracts/: simple_storage.sol  token.sol  voting.sol
include/api/: json_rpc_server.h
include/cli/: command_parser.h  commands.h  contract_cli.h
include/compiler/: contract_compiler.h
include/consensus/: consensus_engine.h  consensus_synchronizer.h  proof_of_authority.h  proof_of_stake.h  proof_of_stake_safe.h  proof_of_work.h
include/core/: block.h  blockchain.h  merkle_tree.h  state_trie.h  transaction.h  transaction_fees.h  transaction_receipt.h
include/crypto/: hash.h  key_pair.h  openssl_compat.h  signature.h
include/network/: network_manager.h  network_messages.h  p2p_network_manager.h  peer_authentication.h  peer_connection_manager.h  peer_manager.h  tcp_network.h  transaction_mempool.h
include/node/: node_runtime.h
include/security/: security_auditor.h
include/storage/: block_pruning.h  block_storage.h  leveldb_storage.h  state_storage.h
include/sync/: fast_sync.h
include/testing/: adversarial_testing.h  scale_testing.h
include/utils/: config.h  error_handler.h  logger.h  performance_monitor.h
include/vm/: determinism_tester.h  smart_contract.h  smart_contract_manager.h  state_store.h  uint256.h  virtual_machine.h  vm_block_validator.h
include/wallet/: wallet.h
scripts/: cleanup_tests.sh  run_tests.sh
src/api/: json_rpc_server.cpp
src/cli/: command_parser.cpp  commands.cpp  contract_cli.cpp
src/compiler/: contract_compiler.cpp
src/consensus/: advanced_consensus.h  consensus_engine.cpp  consensus_synchronizer.cpp  proof_of_authority.cpp  proof_of_stake.cpp  proof_of_stake_safe.cpp  proof_of_work.cpp
src/core/: block.cpp  blockchain.cpp  merkle_tree.cpp  performance_optimizer.cpp  performance_optimizer.h  state_trie.cpp  transaction.cpp  transaction_fees.cpp  transaction_receipt.cpp
src/crypto/: hash.cpp  key_pair.cpp  signature.cpp
src/network/: advanced_network.h  gossip_protocol.cpp  network_manager.cpp  network_messages.cpp  p2p_network_manager.cpp  peer_authentication.cpp  peer_connection_manager.cpp  peer_manager.cpp  tcp_network.cpp  transaction_mempool.cpp
src/node/: node_runtime.cpp
src/security/: security_auditor.cpp  security_auditor.h
src/storage/: advanced_storage.h  block_pruning_manager.cpp  block_storage.cpp  leveldb_block_storage.cpp  leveldb_state_storage.cpp  state_snapshot_manager.cpp  state_storage.cpp
src/sync/: fast_sync_manager.cpp
src/testing/: adversarial_testing_framework.cpp  scale_testing_framework.cpp
src/utils/: config.cpp  error_handler.cpp  logger.cpp  performance_monitor.cpp
src/vm/: determinism_tester.cpp  instruction_handlers.cpp  smart_contract.cpp  smart_contract_manager.cpp  state_store.cpp  uint256.cpp  uint256_safe.cpp  virtual_machine.cpp  vm_block_validator.cpp
src/wallet/: wallet.cpp
tests/: CMakeLists.txt  direct_vm_test.cpp
tests/performance/: benchmark_block_production.cpp  benchmark_tx_throughput.cpp
